feat!: add hotkeys to move tabs

--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,11 @@
 {
-	"id": "sample-plugin",
-	"name": "Sample Plugin",
+	"id": "tab_mover",
+	"name": "Tab mover",
 	"version": "1.0.0",
 	"minAppVersion": "0.15.0",
-	"description": "Demonstrates some of the capabilities of the Obsidian API.",
-	"author": "Obsidian",
-	"authorUrl": "https://obsidian.md",
-	"fundingUrl": "https://obsidian.md/pricing",
+	"description": "Provides hotkeys to move tabs within a group without touching the mouse.",
+	"author": "chrisaxe",
+	"authorUrl": "https://github.com/chrisaxe-git",
+	"fundingUrl": "https://github.com/chrisaxe-git",
 	"isDesktopOnly": false
 }
